Fix issue with backup loading Make display mode scale sliders work locked together with mobile shift toggle Restyle web download button

--- a/css/panels.css
+++ b/css/panels.css
@@ -299,7 +299,7 @@
 		flex-shrink: 1;
 	}
 	.bar.slider_input_combo input.tool[type="number"] {
-		width: 60px;
+		width: 52px;
 		float: none;
 		flex-grow: 0;
 		flex-shrink: 0;
